form spacing issue

--- a/_sass/free-app.scss
+++ b/_sass/free-app.scss
@@ -10,6 +10,6 @@
   margin-right: 10px;
 }
 #free-app form input{
-  margin-top: 5px;
-  margin-bottom: 10px;
+  margin-top: 5px !important;
+  margin-bottom: 10px !important;
 }
